--- a/Log-in.html
+++ b/Log-in.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="top-border">
-      <a id="Logo" href="Index.html"><img class="img" src="ICONS/Qashi.png"></a>
+      <a id="Logo" href="index.html"><img class="img" src="ICONS/Qashi.png"></a>
     </div>
         
       <div class="container">
