--- a/ProductPage.html
+++ b/ProductPage.html
@@ -23,7 +23,7 @@
         <span></span>
         <span></span>
       </div>
-      <a href="Index.html"><img class="img" src="ICONS/Qashi.png" /></a>
+      <a href="index.html"><img class="img" src="ICONS/Qashi.png" /></a>
       <div class="search-container">
         <input type="text" class="search-input" placeholder="Search..." />
         <button class="search-button">Search for Product</button>
