--- a/CheckOut.html
+++ b/CheckOut.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="top-border">
-      <a id="Logo" href="Index.html"><img class="img" src="ICONS/Qashi.png"></a>
+      <a id="Logo" href="index.html"><img class="img" src="ICONS/Qashi.png"></a>
     </div>
 
 
