--- a/Products.html
+++ b/Products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Products</title>
-    <link rel="stylesheet" href="Sheet.css">
+    <link rel="stylesheet" href="Style/Sheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=account_circle" />
 
     <script>
@@ -17,7 +17,7 @@
 <body>
     <!-- Top Menu -->
     <div class="top-menu">
-        <img src="Pictures/Qashi.png" alt="Qashi.com Logo">
+        <img src="ICONS/Qashi.png" alt="Qashi.com Logo">
         <div class="user-profile">
             <span class="material-symbols-outlined">account_circle</span>
             <div class="dropdown">
