--- a/UserPage.html
+++ b/UserPage.html
@@ -11,7 +11,7 @@
 </head>
 <body >
   <div class="top-border">
-    <a id="Logo" href="Index.html"><img class="img" src="ICONS/Qashi.png"></a>
+    <a id="Logo" href="index.html"><img class="img" src="ICONS/Qashi.png"></a>
   </div>
 
     <form action="#" class="form">
