--- a/SellerPage.html
+++ b/SellerPage.html
@@ -64,6 +64,7 @@
             </div>
             
             <div class="btns-group">
+              <a href="#" class="btn"> Back</a>
               <a href="#" class="btn btn-prev">Previous</a>
               <a href="#" class="btn btn-next">Next</a>
             </div>
