--- a/UserPage.html
+++ b/UserPage.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" href="Style/UserPageStyle.css" />
   <script src="Script/UserPage.js" defer></script>
   <title>Registration Form</title>
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
     crossorigin="anonymous">
-    </script>
+  </script>
 
 </head>
 
@@ -19,7 +20,7 @@
     <a id="Logo" href="index.html"><img class="img" src="ICONS/Qashi.png"></a>
   </div>
 
-  <form action="#" method="post" class="form">
+  <form action="#" method="post" id="accountForm" class="form">
     <h1 class="text-center">Registration Form</h1>
     <!-- Progress bar -->
     <div class="progressbar">
