--- a/SellerPage.html
+++ b/SellerPage.html
@@ -19,7 +19,7 @@
     <a id="Logo" href="index.html"><img class="img" src="ICONS/Qashi.png"></a>
     </div>
 
-    <form action="#" class="form">
+    <form action="#" id="accountForm" class="form">
     <h1 class="text-center">Seller Registration Form</h1>
     <!-- Progress bar -->
     <div class="progressbar">
@@ -36,7 +36,7 @@
     <div class="form-step form-step-active">
       <div class="input-group">
         <label for="firstname">Firstname</label>
-        <input type="text" name="firstname" id="firstname" />
+        <input type="text" required name="firstname" id="firstname" />
         <label id="I-username">Please enter a valid name</label>
       </div>
       <div class="input-group">
