--- a/UserPage.html
+++ b/UserPage.html
@@ -36,12 +36,12 @@
     <div class="form-step form-step-active">
       <div class="input-group">
         <label for="username">Firstname</label>
-        <input type="text" name="username" id="username" />
+        <input type="text" required name="username" id="username" />
         <label id="I-username">Please enter a valid name</label>
       </div>
       <div class="input-group">
         <label for="position">Lastname </label>
-        <input type="text" name="position" id="position" />
+        <input type="text" required name="position" id="position" />
         <label id="I-lastname">Please enter a valid name</label>
       </div>
       <div class="">
@@ -51,12 +51,12 @@
     <div class="form-step">
       <div class="input-group">
         <label for="phone">Phone</label>
-        <input type="text" name="phone" id="phone" />
+        <input type="text" required name="phone" id="phone" />
         <label id="I-phone">Please enter a valid phone numbre</label>
       </div>
       <div class="input-group">
         <label for="email">Email</label>
-        <input type="text" name="email" id="email" />
+        <input type="text" required name="email" id="email" />
         <label id="I-email">Please enter a valid Email</label>
       </div>
       <div class="btns-group">
@@ -67,7 +67,7 @@
     <div class="form-step">
       <div class="input-group">
         <label for="dob">Date of Birth</label>
-        <input type="date" name="dob" id="dob" />
+        <input type="date" required name="dob" id="dob" />
         <label id="I-dob">Please enter a valid date of birth</label>
       </div>
       <div class="btns-group">
@@ -78,7 +78,7 @@
     <div class="form-step">
       <div class="input-group">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" />
+        <input type="password" required name="password" id="password" />
       </div>
       <div id="PassValidation">
         <ul>
@@ -91,7 +91,7 @@
       </div>
       <div class="input-group">
         <label for="confirmPassword">Confirm Password</label>
-        <input type="password" name="confirmPassword" id="confirmPassword" />
+        <input type="password" required name="confirmPassword" id="confirmPassword" />
         <label id="I-confirmPassword">Passwords do not match</label>
       </div>
       <div class="btns-group">
