--- a/Log-in.html
+++ b/Log-in.html
@@ -12,28 +12,31 @@
   <link rel="stylesheet" href="Style/Log-inStyle.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <title>Log-in</title>
+  <div class="top-border">
+    <img id="Logo" class="img" src="ICONS/Qashi.png"></a>
+</div>
 
 </head>
 
 <body>
-  <div class="top-border">
-    <a id="Logo" href="index.html"><img class="img" src="ICONS/Qashi.png"></a>
-  </div>
+  <div class="login-container">
+    <h1>Connecter vous à votre compte</h1>
+    <form action="" id="loginForm" method="post">
+    <label for="email">Email :</label>
+      <input type="text" id="email" name="email" placeholder="Entrez votre email">
 
-  <div class="container">
-    <h2>Connecter vous à votre compte</h2>
-    <form action="/action_page.php" id="loginForm">
-      <label for="lname">Email :</label>
-      <input type="text" id="lname" name="lname">
+      <label for="password">Mot de passe :</label>
+      <input type="password" id="password" name="password" placeholder="Entrez votre mot de passe">
 
-      <label for="psswrd">Mot de passe :</label>
-      <input type="password" id="psswrd" name="psswrd">
       <a href="Sign-up.html">Vous n'avez pas de compte ?</a>
-      <input type="submit" id="submit" value="Se connecter">
+
+      <div id="conncet">
+        <button type="submit" id="submit">Se connecter</button>
+      </div>
       <script>
         document.getElementById("loginForm").addEventListener("submit", function (event) {
           event.preventDefault();
-          if (document.getElementById("lname").value == "" || document.getElementById("psswrd").value == "") {
+          if (document.getElementById("email").value == "" || document.getElementById("password").value == "") {
             Swal.fire({
               title: 'Erreur',
               text: 'Veuillez remplir tous les champs',
