Enhance Cart Functionality and User Interface
- Updated the Wilaya selection in CheckOut.html to include numbered options for better clarity.
- Implemented AJAX functionality to dynamically fetch and display cart items in CheckOut.html.
- Added new scripts and styles for cart management, including increase and decrease item quantity features.
- Introduced a new Cart.css for improved styling of the cart dropdown and items.
- Enhanced the overall user experience with responsive design adjustments across multiple pages, including index.html and ProductPage.html.
- Created new PHP scripts for managing cart items in the database, ensuring efficient item updates and retrieval.

These changes aim to streamline the shopping experience and improve user interaction with the cart system.

--- a/Favorite-items.html
+++ b/Favorite-items.html
@@ -11,6 +11,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="Style/Favorite-ItemsStyle.css">
   <link rel="stylesheet" href="Style/Menu.css">
+  <link rel="stylesheet" href="Style/Cart.css">
 
   <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css" />
   <link rel="stylesheet" href="https://cdn.datatables.net/responsive/3.0.3/css/responsive.dataTables.min.css" />
@@ -24,6 +25,7 @@
 
 <body>
   <script defer src="Script/Menu.js"></script>
+  <script src="Script/HomePage.js"></script>
 
   <div class="top-border">
     <div class="hamburger" onclick="toggleSidebar()">
