--- a/ProductPage.html
+++ b/ProductPage.html
@@ -11,6 +11,8 @@
     />
     <link rel="stylesheet" href="Style/Menu.css" />
     <link rel="stylesheet" href="Style/Product_page.css" />
+    <link rel="stylesheet" href="Style/Cart.css">
+    <script src="Script/HomePage.js"></script>
     <title>Qashi</title>
   </head>
   <body>
