--- a/CheckOut.html
+++ b/CheckOut.html
@@ -32,56 +32,69 @@
 
               <label for="wilaya">Wilaya</label>
               <select id="wilaya" required name="wilaya">
-                <option disabled selected value> -- select an option -- </option>
-                <option value="Adrar">Adrar</option>
-                <option value="Aïn Defla">Aïn Defla</option>
-                <option value="Aïn Témouchent">Aïn Témouchent</option>
-                <option value="Algiers">Algiers</option>
-                <option value="Annaba">Annaba</option>
-                <option value="Batna">Batna</option>
-                <option value="Béchar">Béchar</option>
-                <option value="Béjaïa">Béjaïa</option>
-                <option value="Biskra">Biskra</option>
-                <option value="Blida">Blida</option>
-                <option value="Bordj Bou Arréridj">Bordj Bou Arréridj</option>
-                <option value="Bouira">Bouira</option>
-                <option value="Boumerdès">Boumerdès</option>
-                <option value="Chlef">Chlef</option>
-                <option value="Constantine">Constantine</option>
-                <option value="Djelfa">Djelfa</option>
-                <option value="El Bayadh">El Bayadh</option>
-                <option value="El Oued">El Oued</option>
-                <option value="El Tarf">El Tarf</option>
-                <option value="Ghardaïa">Ghardaïa</option>
-                <option value="Guelma">Guelma</option>
-                <option value="Illizi">Illizi</option>
-                <option value="Jijel">Jijel</option>
-                <option value="Khenchela">Khenchela</option>
-                <option value="Laghouat">Laghouat</option>
-                <option value="Mascara">Mascara</option>
-                <option value="Médéa">Médéa</option>
-                <option value="Mila">Mila</option>
-                <option value="Mostaganem">Mostaganem</option>
-                <option value="M'Sila">M'Sila</option>
-                <option value="Naâma">Naâma</option>
-                <option value="Oran">Oran</option>
-                <option value="Ouargla">Ouargla</option>
-                <option value="Oum El Bouaghi">Oum El Bouaghi</option>
-                <option value="Relizane">Relizane</option>
-                <option value="Saïda">Saïda</option>
-                <option value="Sétif">Sétif</option>
-                <option value="Sidi Bel Abbès">Sidi Bel Abbès</option>
-                <option value="Skikda">Skikda</option>
-                <option value="Souk Ahras">Souk Ahras</option>
-                <option value="Tamanghasset">Tamanghasset</option>
-                <option value="Tébessa">Tébessa</option>
-                <option value="Tiaret">Tiaret</option>
-                <option value="Tindouf">Tindouf</option>
-                <option value="Tipaza">Tipaza</option>
-                <option value="Tissemsilt">Tissemsilt</option>
-                <option value="Tizi Ouzou">Tizi Ouzou</option>
-                <option value="Tlemcen">Tlemcen</option>
+                <option disabled selected value>-- Select Wilaya --</option>
+                <option value="Adrar">01 - Adrar</option>
+                <option value="Chlef">02 - Chlef</option>
+                <option value="Laghouat">03 - Laghouat</option>
+                <option value="Oum El Bouaghi">04 - Oum El Bouaghi</option>
+                <option value="Batna">05 - Batna</option>
+                <option value="Bejaia">06 - Bejaia</option>
+                <option value="Biskra">07 - Biskra</option>
+                <option value="Bechar">08 - Bechar</option>
+                <option value="Blida">09 - Blida</option>
+                <option value="Bouira">10 - Bouira</option>
+                <option value="Tamanrasset">11 - Tamanrasset</option>
+                <option value="Tebessa">12 - Tebessa</option>
+                <option value="Tlemcen">13 - Tlemcen</option>
+                <option value="Tiaret">14 - Tiaret</option>
+                <option value="Tizi Ouzou">15 - Tizi Ouzou</option>
+                <option value="Algiers">16 - Algiers</option>
+                <option value="Djelfa">17 - Djelfa</option>
+                <option value="Jijel">18 - Jijel</option>
+                <option value="Setif">19 - Setif</option>
+                <option value="Saida">20 - Saida</option>
+                <option value="Skikda">21 - Skikda</option>
+                <option value="Sidi Bel Abbes">22 - Sidi Bel Abbes</option>
+                <option value="Annaba">23 - Annaba</option>
+                <option value="Guelma">24 - Guelma</option>
+                <option value="Constantine">25 - Constantine</option>
+                <option value="Medea">26 - Medea</option>
+                <option value="Mostaganem">27 - Mostaganem</option>
+                <option value="M'Sila">28 - M'Sila</option>
+                <option value="Mascara">29 - Mascara</option>
+                <option value="Ouargla">30 - Ouargla</option>
+                <option value="Oran">31 - Oran</option>
+                <option value="El Bayadh">32 - El Bayadh</option>
+                <option value="Illizi">33 - Illizi</option>
+                <option value="Bordj Bou Arreridj">34 - Bordj Bou Arreridj</option>
+                <option value="Boumerdes">35 - Boumerdes</option>
+                <option value="El Tarf">36 - El Tarf</option>
+                <option value="Tindouf">37 - Tindouf</option>
+                <option value="Tissemsilt">38 - Tissemsilt</option>
+                <option value="El Oued">39 - El Oued</option>
+                <option value="Khenchela">40 - Khenchela</option>
+                <option value="Souk Ahras">41 - Souk Ahras</option>
+                <option value="Tipaza">42 - Tipaza</option>
+                <option value="Mila">43 - Mila</option>
+                <option value="Ain Defla">44 - Ain Defla</option>
+                <option value="Naama">45 - Naama</option>
+                <option value="Ain Temouchent">46 - Ain Temouchent</option>
+                <option value="Ghardaia">47 - Ghardaia</option>
+                <option value="Relizane">48 - Relizane</option>
+                <option value="Timimoun">49 - Timimoun</option>
+                <option value="Bordj Badji Mokhtar">50 - Bordj Badji Mokhtar</option>
+                <option value="Ouled Djellal">51 - Ouled Djellal</option>
+                <option value="Beni Abbes">52 - Beni Abbes</option>
+                <option value="Ain Salah">53 - Ain Salah</option>
+                <option value="Ain Guezzam">54 - Ain Guezzam</option>
+                <option value="Touggourt">55 - Touggourt</option>
+                <option value="Djanet">56 - Djanet</option>
+                <option value="El M'Ghair">57 - El M'Ghair</option>
+                <option value="El Menia">58 - El Menia</option>
               </select>
+
+
+
               <label id="I-wilaya">Please select a wilaya</label>
 
               <div class="row">
@@ -108,30 +121,42 @@
       <div class="container">
         <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>2</b></span></h4>
         <script>
-          document.addEventListener('DOMContentLoaded', function() {
+          document.addEventListener('DOMContentLoaded', function () {
             fetchCartItems();
           });
 
           function fetchCartItems() {
             const xhr = new XMLHttpRequest();
-            xhr.open('GET', 'fetch_cart_items.php', true);
+            xhr.open('GET', 'Database/fetch_cart_items.php', true);
 
-            xhr.onload = function() {
+            xhr.onload = function () {
               if (xhr.status === 200 && xhr.readyState === 4) {
                 const data = JSON.parse(xhr.responseText);
                 const cartContainer = document.querySelector('.col-25 .container');
                 let cartHTML = '<h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>' + data.length + '</b></span></h4>';
-                
+
                 let total = 0;
                 data.forEach(item => {
-                  cartHTML += `<p>${item.name} <span class="price">$${item.price}</span></p>`;
-                  total += parseFloat(item.price);
-                  total = Math.round(total * 100) / 100; 
+                  // Calculate the total for each product (price * quantity)
+                  const itemTotal = parseFloat(item.price) * parseInt(item.quantity);
+                  total += itemTotal;
+
+                  // Add the product to the cart HTML
+                  cartHTML += `
+          <p>
+            ${item.name} (x${item.quantity}) 
+            <span class="price">$${itemTotal.toFixed(2)}</span>
+          </p>
+        `;
                 });
 
-        
-                cartHTML += `<hr><p>Total <span class="price" style="color:black"><b>$${total}</b></span></p>`;
+                // Round the total to two decimal places
+                total = Math.round(total * 100) / 100;
 
+                // Add the total to the cart HTML
+                cartHTML += `<hr><p>Total <span class="price" style="color:black"><b>$${total.toFixed(2)}</b></span></p>`;
+
+                // Update the cart container with the new HTML
                 cartContainer.innerHTML = cartHTML;
               } else {
                 console.error('Error fetching cart items.');
@@ -140,6 +165,7 @@
 
             xhr.send();
           }
+
         </script>
       </div>
     </div>
