Add order management functionality with order fetching, updating, and deletion

--- a/Seller_Orders.html
+++ b/Seller_Orders.html
@@ -51,33 +51,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>#O1001</td>
-                    <td>Customer 1</td>
-                    <td>2023-01-01</td>
-                    <td>$100.00</td>
-                    <td><span class="status pending">Pending</span></td>
-                    <td><button class="edit-button">Edit</button> <button class="delete-button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td>#O1002</td>
-                    <td>Customer 2</td>
-                    <td>2023-01-02</td>
-                    <td>$150.00</td>
-                    <td><span class="status completed">Completed</span></td>
-                    <td><button class="edit-button">Edit</button> <button class="delete-button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td>#O1003</td>
-                    <td>Customer 3</td>
-                    <td>2023-01-03</td>
-                    <td>$200.00</td>
-                    <td><span class="status cancelled">Cancelled</span></td>
-                    <td><button class="edit-button">Edit</button> <button class="delete-button">Delete</button></td>
-                </tr>
-                <!-- More rows as needed -->
+                <!-- Orders will be loaded here dynamically -->
             </tbody>
         </table>
     </main>
+    <script src="Script/SellerOrders.js"></script>
 </body>
 </html>
