--- a/Seller_Customers.html
+++ b/Seller_Customers.html
@@ -6,6 +6,7 @@
     <title>Customers</title>
     <link rel="stylesheet" href="Style/Sheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <script src="Script/Seller_Customers.js" defer></script>
 </head>
 <body>
     <!-- Top Menu -->
@@ -31,7 +32,8 @@
                 <li><a href="Seller_Orders.html"><i class="icon-orders"></i><span>Orders</span></a></li>
                 <li><a href="Seller_Products.html"><i class="icon-products"></i><span>Products</span></a></li>
                 <li><a href="Seller_Analytics.html"><i class="icon-analytics"></i><span>Analytics</span></a></li>
-                <li class="active"><a href="Seller_Customers.html"><i class="icon-customers"></i><span>Customers</span></a></li>            </ul>
+                <li class="active"><a href="Seller_Customers.html"><i class="icon-customers"></i><span>Customers</span></a></li>
+            </ul>
         </nav>
     </aside>
 
@@ -49,28 +51,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>#C1001</td>
-                    <td>Customer 1</td>
-                    <td>customer1@example.com</td>
-                    <td>123-456-7890</td>
-                    <td><button class="edit-button">Edit</button> <button class="delete-button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td>#C1002</td>
-                    <td>Customer 2</td>
-                    <td>customer2@example.com</td>
-                    <td>123-456-7891</td>
-                    <td><button class="edit-button">Edit</button> <button class="delete-button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td>#C1003</td>
-                    <td>Customer 3</td>
-                    <td>customer3@example.com</td>
-                    <td>123-456-7892</td>
-                    <td><button class="edit-button">Edit</button> <button class="delete-button">Delete</button></td>
-                </tr>
-                <!-- More rows as needed -->
+                <!-- Customers will be loaded here dynamically -->
             </tbody>
         </table>
     </main>
