--- a/Seller_Products.html
+++ b/Seller_Products.html
@@ -60,31 +60,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>#P1001</td>
-                    <td>Product 1</td>
-                    <td>Category 1</td>
-                    <td>$20.00</td>
-                    <td><span class="status in-stock">In Stock</span></td>
-                    <td><button class="edit-button">Edit</button> <button class="delete-button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td>#P1002</td>
-                    <td>Product 2</td>
-                    <td>Category 2</td>
-                    <td>$30.00</td>
-                    <td><span class="status out-of-stock">Out of Stock</span></td>
-                    <td><button class="edit-button">Edit</button> <button class="delete-button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td>#P1003</td>
-                    <td>Product 3</td>
-                    <td>Category 3</td>
-                    <td>$25.00</td>
-                    <td><span class="status in-stock">In Stock</span></td>
-                    <td><button class="edit-button">Edit</button> <button class="delete-button">Delete</button></td>
-                </tr>
-                <!-- More rows as needed -->
+                <!-- Products will be loaded here dynamically -->
             </tbody>
         </table>
 
