enhance user dashboard with product and seller name columns

--- a/User_Dashboard.html
+++ b/User_Dashboard.html
@@ -46,6 +46,8 @@
                         <th>Date</th>
                         <th>Status</th>
                         <th>Total</th>
+                        <th>Product Name</th>
+                        <th>Seller Name</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -54,12 +56,16 @@
                         <td>2024-11-24</td>
                         <td><span class="status completed">Completed</span></td>
                         <td>$100.00</td>
+                        <td>Product 1</td>
+                        <td>Charlie Brown</td>
                     </tr>
                     <tr>
                         <td>12346</td>
                         <td>2024-11-25</td>
                         <td><span class="status pending">Pending</span></td>
                         <td>$50.00</td>
+                        <td>Product 2</td>
+                        <td>Charlie Brown</td>
                     </tr>
                     <!-- More rows as needed -->
                 </tbody>
