--- a/Log-in.html
+++ b/Log-in.html
@@ -11,6 +11,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="Style/Log-inStyle.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="Script/Log-in.js" defer></script>
   <title>Log-in</title>
   <div class="top-border">
     <img id="Logo" class="img" src="ICONS/Qashi.png"></a>
@@ -24,6 +25,8 @@
     <form action="" id="loginForm" method="post">
     <label for="email">Email :</label>
       <input type="text" id="email" name="email" placeholder="Entrez votre email">
+      <label for="email" id="emailLabel">Email :</label>
+
 
       <label for="password">Mot de passe :</label>
       <input type="password" id="password" name="password" placeholder="Entrez votre mot de passe">
@@ -33,29 +36,7 @@
       <div id="conncet">
         <button type="submit" id="submit">Se connecter</button>
       </div>
-      <script>
-        document.getElementById("loginForm").addEventListener("submit", function (event) {
-          event.preventDefault();
-          if (document.getElementById("email").value == "" || document.getElementById("password").value == "") {
-            Swal.fire({
-              title: 'Erreur',
-              text: 'Veuillez remplir tous les champs',
-              icon: 'error',
-              confirmButtonText: 'Réessayer'
-            })
-            return;
-          }
-          Swal.fire({
-            title: 'Connexion réussie',
-            icon: 'success',
-            confirmButtonText: 'Continuer'
-          }).then((result) => {
-            if (result.isConfirmed) {
-              window.location.href = "/action_page.php";
-            }
-          });
-        });
-      </script>
+     
     </form>
   </div>
 </body>
